# stag-python-test

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  StagModule.cpp  StagWrapper.cpp  TODO.txt  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
cmake/: FindEigen3.cmake
example/: example.py
scripts/: windows_repair_wheel.py
src/: StagModule.cpp  main.cpp
src/stag/: StagModule.cpp  __init__.py
