[project]
name = "stag-python"
version = "0.2.5"
authors = [
    {name = "Manfred Stoiber", email = "manfred.stoiber@gmail.com"}
]
description = "STag - A Stable, Occlusion-Resistant Fiducial Marker System"
requires-python = ">=3.7"
readme = "README.md"
dependencies = [
    "numpy"
]

[build-system]
requires = [
    "setuptools",
    "numpy",
    "requests",
    "urllib3<2" # requests does not work with urllib>2 on python 3.7, since openssl1.1.1+ is not available
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = [
    "submodules/*/LICENSE",
    "LICENSE"
]
py-modules = []

#[tool.setuptools.package-data]
#"stag" = ["libopencv_imgproc*", "libopencv_core*"]
