[project]
name = "stag-python"
version = "1.0.2"
authors = [
    {name = "Manfred Stoiber", email = "manfred.stoiber@gmail.com"}
]
description = "STag - A Stable, Occlusion-Resistant Fiducial Marker System"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/manfredstoiber/stag-python"

[build-system]
requires = [
    "setuptools",
    "oldest-supported-numpy; platform_machine!='aarch64' and (python_version!='3.10' or platform_system!='Windows' or platform_python_implementation!='PyPy')",
    "requests",
    "urllib3<2" # requests does not work with urllib>2 on python 3.7, since openssl1.1.1+ is not available
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
license-files = [
    "submodules/*/LICENSE",
    "LICENSE"
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel==1.6.0"
repair-wheel-command = "python scripts/windows_repair_wheel.py {dest_dir} {wheel}"
